--- a/grid.css
+++ b/grid.css
@@ -1,421 +1,365 @@
-/*
-
-OpenJS Grid
-
-Copyright (c) 2011 Sean Clark, http://square-bracket.com
-http://youtube.com/optikalefxx
-http://square-bracket.com/openjs
-
-Permission is hereby granted, free of charge, to any person obtaining
-a copy of this software and associated documentation files (the
-"Software"), to deal in the Software without restriction, including
-without limitation the rights to use, copy, modify, merge, publish,
-distribute, sublicense, and/or sell copies of the Software, and to
-permit persons to whom the Software is furnished to do so, subject to
-the following conditions:
-
-The above copyright notice and this permission notice shall be
-included in all copies or substantial portions of the Software.
-
-THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
-EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
-MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
-NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE
-LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION
-OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION
-WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
-
-This is OpenJS Grid version 1.8
-Style Theme: Node
-
-*/
-
-/*********************************************************************************/
-/*********************************************************************************/
-/*****************************      COLORS       *********************************/
-/*********************************************************************************/
-/*********************************************************************************/
-
-/* main color */
-.gridContainer {
-	
-	padding:20px;
-	
-	background-color: #636470;
-
-	/* Grid Shadow */
-	-webkit-box-shadow: 0px 0px 10px #000;
-	-moz-box-shadow: 0px 0px 10px #000;
+body {
+  padding: 80px;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 13px;
+  line-height: 18px;
+  color: #333;
 }
-
-/* Font Family, Size and Color */
-.gridContainer, .grid, .gridHeaderRow, .gridContainer a, .gridContainer input {
-	font-family:arial;
-	font-size:11px;
-	font-weight:bold;
-	color:#fff;
+.left {
+  float: left;
 }
-
-.grid {
-	border-spacing:0px;
-	border-collapse:collapse;
-	/* if you want cell separation
-	border-spacing:1px;
-	border-collapse:separate;
-	*/
-	
-	background:#464752;
+.right {
+  float: right;
 }
-
-
-/*********************************************************************************/
-/*********************************************************************************/
-/*****************************      END COLORS       *****************************/
-/*********************************************************************************/
-/*********************************************************************************/
-
-
-/* if you want to turn off animations for speed reasons turns these off */
-.gridContainer tr, .gridContainer td, .gridContainer th, .gridContext div {
-	/*
-	-webkit-transition: background-color 200ms linear;
-	-moz-transition: background-color 200ms linear;
-	*/
+.fc {
+  overflow: hidden;
 }
-
-/* padding of the cells */
-.grid td, .gridHeaderRow th {
-	padding:0px;
-	border-left:1px solid #636470;
-	padding-left:6px;
+div.gridWrapper {
+  width: 800px;
+  min-width: 515px;
+  border: 1px solid #ddd;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+  height: 280px;
+  position: relative;
+  background: #fff;
+  margin-bottom: 70px;
 }
-.grid td {
-	border-left-color:transparent;
+div.gridWrapper.resizing,
+div.gridWrapper.resizing input {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
-
-.grid td:first-child, .gridHeaderRow th:first-child {
-	padding-left:12px;
+div.gridWrapper.moving {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
-
-.grid td {
-	padding-top:5px;
-	padding-bottom:5px;
+div.gridWrapper .dialog {
+  position: absolute;
+  top: 50px;
+  left: 50%;
+  padding: 20px;
+  -webkit-border-radius: 7px;
+  border-radius: 7px;
+  color: #333;
+  font-size: 11px;
+  width: 200px;
+  height: 80px;
+  margin-left: -100px;
+  background: #fff;
+  -webkit-box-shadow: 0px 0px 10px rgba(0,0,0,0.4);
+  box-shadow: 0px 0px 10px rgba(0,0,0,0.4);
+  opacity: 0;
+  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
+  filter: alpha(opacity=0);
+  -webkit-transition: opacity 200ms ease-out;
+  -moz-transition: opacity 200ms ease-out;
+  -o-transition: opacity 200ms ease-out;
+  -ms-transition: opacity 200ms ease-out;
+  transition: opacity 200ms ease-out;
 }
-
-/* ODD ROWS */
-.grid tr:nth-child(2n) {
-	
+div.gridWrapper .dialog.show {
+  opacity: 1;
+  -ms-filter: none;
+  filter: none;
 }
-/* EVEN ROWS */
-.grid tr:nth-child(2n+1) {
-	
+div.gridWrapper .dialog span.body {
+  display: block;
+  margin-bottom: 5px;
 }
-
-/* this can't inherit the color because its fixed to the bottom of the page */
-.gridPager.fixed {
-	background:#333;
+div.gridWrapper .dialog span.label {
+  top: -10px;
+  position: relative;
+  padding-top: 2px;
 }
-
-/* Row Highlight */
-.gridWrapper tr:hover, .gridContainer th:hover,  .gridWrapper tr:hover input, .gridWrapper tr:hover a{
-	color:#fff;
-	background-color: #525357;
+div.gridWrapper .dialog .buttons {
+  bottom: 12px;
+  position: absolute;
+  right: 15px;
 }
-
-/* Current Cell Highlight */
-.grid td:hover {
-	background-color: #636470;
+div.gridWrapper .dialog .buttons button {
+  outline: none;
 }
-
-
-/* Cell Borders */
-.grid td {
-	
+div.gridWrapper .dialog.gridNotify {
+  width: 100px;
+  height: 30px;
+  text-align: center;
+  margin-left: -50px;
 }
-
-.gridHeaderRow {	
-	border-collapse:collapse;
+div.gridWrapper .gridLoading {
+  text-align: center;
+  display: block;
+  width: 100%;
+  font-size: 11px;
+  height: 100%;
 }
-
-
-/* column hilte */
-.grid td.hilite {
-	background-color:#2A8ADD;
-	color:#fff;
+div.gridWrapper .gridResizer {
+  position: absolute;
+  right: 0px;
+  top: 0px;
+  bottom: 0px;
+  width: 10px;
+  cursor: e-resize;
 }
-
-/* stuck row */
-.stuckRow td{
-	padding:8px;
-	background:#000;
+div.gridWrapper .columns {
+  height: inherit;
+  overflow-x: hidden;
+  opacity: 1;
+  -ms-filter: none;
+  filter: none;
 }
-/* right click menu main box */
-.gridContext {
-	background-color:white;
-	-moz-border-radius:5px;
-	border-radius:5px;
-	-moz-box-shadow:3px 3px 15px #000;
-	-webkit-box-shadow:3px 3px 15px #000;
-	box-shadow:3px 3px 15px #000;
+div.gridWrapper .columns.blur {
+  opacity: 0.2;
+  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=20);
+  filter: alpha(opacity=20);
 }
-/* right click menu each item */
-.gridContext div {
-	color:black;
-	font-size:12px;
-	padding:6px 15px;
+div.gridWrapper .columns .cell {
+  padding: 5px;
+  border-left: 1px solid #ddd;
+  white-space: nowrap;
+  height: 24px;
+  position: relative;
+  overflow: hidden;
 }
-/* right click menu hover */
-.gridContext div:hover {
-	background-color:#4071ee;
-	color:white;
+div.gridWrapper .columns .cell:nth-child(2),
+div.gridWrapper .columns .cell.topMargin {
+  margin-top: 40px;
 }
-/* editable cell */
-.editableInput[type="text"] {
-
-	border-width:0px;
-	/*border-bottom:1px dashed #ccc;*/
+div.gridWrapper .columns .cell.level2 {
+  height: 160px;
+  overflow: visible;
 }
-
-textarea.editableInput {
-	
+div.gridWrapper .columns .cell.level2 .level2Grid {
+  background: #00f;
+  height: 147px;
+  width: 793px;
+  z-index: 5;
+  position: absolute;
 }
-
-/* title bar */
-.gridTitle {
-	padding:10px;
-	font-size:14px;
-	
-	
+div.gridWrapper .columns .cell img {
+  max-width: 100%;
+  max-height: 100%;
 }
-
-/* structure for entire grid */
-.gridContainer {
-	margin-bottom:10px;
-	overflow:hidden;
-	position:relative;
-	border-collapse:collapse;
+div.gridWrapper .columns .cell.row-hover {
+  background: rgba(0,0,0,0.05);
 }
-
-/* minimum shown before scroll bar apppears */
-.gridWrapper {
-	max-height:500px;
-	overflow-x:hidden;
+div.gridWrapper .columns .cell.input {
+  padding-right: 15px;
 }
-
-.gridHeaderRow tr:first-child {
-
-	background-color: rgba(0,0,0,.2);
-	background-image: -webkit-gradient(linear, left top, left bottom, from(transparent), to(rgba(0,0,0,.2))); 
-	background-image: -webkit-linear-gradient(top, transparent, rgba(0,0,0,.2)); 
-	background-image:    -moz-linear-gradient(top, transparent, rgba(0,0,0,.2)); 
-	background-image:     -ms-linear-gradient(top, transparent, rgba(0,0,0,.2)); 
-	background-image:      -o-linear-gradient(top, transparent, rgba(0,0,0,.2)); 
-	background-image:         linear-gradient(top, transparent, rgba(0,0,0,.2));
+div.gridWrapper .columns .cell.select {
+  padding-right: 5px;
 }
-
-/* the header row cells */
-.gridHeaderRow th {
-	width:150px;
-	cursor:pointer;
-	padding-top:12px;
-	padding-bottom:12px;
+div.gridWrapper .columns .cell.center {
+  text-align: center;
 }
-
-.gridHeaderRow th:first-child {
-	border-left:0px;
+div.gridWrapper .columns .cell.editable input[type="text"] {
+  width: 100%;
+  -webkit-box-shadow: inset 0px 1px 3px #ccc;
+  box-shadow: inset 0px 1px 3px #ccc;
+  border: 0px;
+  margin: 0px;
 }
-.gridHeaderRow th:last-child {
-	border-right:0px;
+div.gridWrapper .columns .cell.blankCell {
+  zoom: 1;
 }
-
-/* expand the inner components to meet the size of the container */
-.grid, .gridHeaderRow {
-	width: 100%;
+div.gridWrapper .columns .cell.headerCell {
+  position: absolute;
+  width: inherit;
+  height: inherit;
+  overflow: hidden;
+  border-bottom: 1px solid #ddd;
+  padding: 0px;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #fff), color-stop(1, #e4e4e4));
+  background: -webkit-linear-gradient(top, #fff 0%, #e4e4e4 100%);
+  background: -moz-linear-gradient(top, #fff 0%, #e4e4e4 100%);
+  background: -o-linear-gradient(top, #fff 0%, #e4e4e4 100%);
+  background: -ms-linear-gradient(top, #fff 0%, #e4e4e4 100%);
+  background: linear-gradient(top, #fff 0%, #e4e4e4 100%);
+  z-index: 2;
 }
-
-/* all input fields */
-.gridContainer input, textarea {
-	background-color:rgba(0,0,0,.4);
-	border:1px solid rgba(255,255,255,.2);
-	outline:0px;
-	height:2em;
-	margin-top:-2px;
-	-moz-border-radius:3px;
-	border-radius:3px;
-	-webkit-box-shadow: inset 0px 2px 5px #111111;
-	-moz-box-shadow: inset 0px 2px 5px #111111;
-	border:0px;
+div.gridWrapper .columns .cell.headerCell span {
+  font-weight: bold;
+  padding: 9px;
+  display: block;
 }
-
-/* no border left on first cell */
-.grid td:first-child {
-	border-left:0px;
+div.gridWrapper .columns .cell.headerCell .sortbar {
+  position: absolute;
+  height: 10px;
+  width: 100%;
+  bottom: 0px;
+  left: 0px;
+  font-size: 13px;
+  line-height: 9px;
+  text-align: center;
+  display: none;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  -ms-transform: rotate(0deg);
+  transform: rotate(0deg);
 }
-/* no border right on last cell */
-.grid td:last-child {
-	border-right:0px;
+div.gridWrapper .columns .cell.headerCell .sortbar.desc {
+  -webkit-transform: rotate(180deg);
+  -moz-transform: rotate(180deg);
+  -o-transform: rotate(180deg);
+  -ms-transform: rotate(180deg);
+  transform: rotate(180deg);
 }
-/* select drop down boxes */
-.grid td select {
-	width:95%;
-	border: 1px solid rgba(255,255,255,.1);
-	outline:0px;
+div.gridWrapper .columns .cell.headerCell .resizer {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  height: 100%;
+  width: 10px;
+  background: transparent;
+  cursor: move;
 }
-/* the pager */
-.gridPager {
-	width:auto;
-	height:25px;
-	overflow:hidden;
-	padding:10px 0px 10px 10px;
-	border-bottom-left-radius: 10px;
-	border-bottom-right-radius: 10px;
-	-moz-border-radius-bottomright: 10px;
-	-moz-border-radius-bottomleft: 10px;
-	
-	background-color: rgba(0,0,0,.2);
-	background-image: -webkit-gradient(linear, left top, left bottom, from(transparent), to(rgba(0,0,0,.2))); 
-	background-image: -webkit-linear-gradient(top, transparent, rgba(0,0,0,.2)); 
-	background-image:    -moz-linear-gradient(top, transparent, rgba(0,0,0,.2)); 
-	background-image:     -ms-linear-gradient(top, transparent, rgba(0,0,0,.2)); 
-	background-image:      -o-linear-gradient(top, transparent, rgba(0,0,0,.2)); 
-	background-image:         linear-gradient(top, transparent, rgba(0,0,0,.2));
+div.gridWrapper .columns .col {
+  float: left;
 }
-
-.gridPager.pagerTop {
-	border-radius:0;
-	-moz-border-radius:0;
-	-webkit-border-radius:0;
+div.gridWrapper .columns .col._checkbox .headerCell {
+  text-align: center;
 }
-
-/* when the pager is fixed */
-.gridPager.fixed {
-	position:fixed;
-	bottom:0;
-	z-index:999;
-	width:100%;
+div.gridWrapper .columns .col:first-child .cell {
+  border-left: 0px;
 }
-/* the last button in the pager when its fixed */
-.gridPager.fixed > div:last-child {
-	position: relative;
-	left:-20px;
+div.gridWrapper.small .cell.headerCell {
+  text-align: center;
 }
-/* every div inside the pager */
-.gridPager > div {
-	margin-right:16px;
-	float:left;
+div.gridWrapper.small .cell.headerCell span {
+  padding: 4.5px;
 }
-
-/* the text string inside the pager */
-.gridTotal {
-	padding:5px;
+div.gridWrapper.small .gridPager .slider span {
+  width: 70px;
 }
-/* button styles */
-.gridButton {
-	padding:5px;
-	-moz-border-radius:3px;
-	border-radius:3px;
-	cursor:pointer;
-	text-align:center;
-	font-size:11px;
-	
-	background-color: #525357;
-	background-image: -webkit-gradient(linear, left top, left bottom, from(#636470), to(#525357)); 
-	background-image: -webkit-linear-gradient(top, #636470, #525357); 
-	background-image:    -moz-linear-gradient(top, #636470, #525357); 
-	background-image:     -ms-linear-gradient(top, #636470, #525357); 
-	background-image:      -o-linear-gradient(top, #636470, #525357); 
-	background-image:         linear-gradient(top, #636470, #525357);
-	
-	-webkit-box-shadow:1px 1px 5px #222;
-	box-shadow:1px 1px 5px #222;
-	
-	color:white;
-
+div.gridWrapper.small .gridPager .search input:focus {
+  width: 120px;
 }
-
-.gridButton:active {
-	-webkit-box-shadow:-1px -1px 4px black;
-	-moz-box-shadow:-1px -1px 4px black;	
+div.gridWrapper.small,
+div.gridWrapper.small input {
+  font-size: 10px;
 }
-
-/* buttons in the title bar */
-.gridTitle .gridButton {
-	margin-top:-3px;
-	margin-right:6px;
-	float:right;
+div.gridWrapper .gridPager {
+  margin-top: 15px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
-
-/* save button in the pager */
-.gridPager .gridSave {
-	float:right !important;
-	display:none;
+div.gridWrapper .gridPager .slider span {
+  border: 1px solid #ddd;
+  float: left;
+  height: 34px;
+  border-left: none;
+  width: 150px;
 }
-/* refresh button is tinier */
-.gridRefresh {
-	font-size:10px;
+div.gridWrapper .gridPager .slider .slider {
+  width: 88%;
+  padding-left: 6%;
+  padding-right: 6%;
 }
-
-/* the div inside of each th that will chagne size */
-.colResizer {
-	background-color:transparent;
-	position:relative;
-	height:inherit;
+div.gridWrapper .gridPager .slider .slider .sliderTrack {
+  width: auto;
+  height: 4px;
+  -webkit-box-shadow: inset 0px 2px 5px #333;
+  box-shadow: inset 0px 2px 5px #333;
+  margin-top: 15px;
+  background: #ccc;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
 }
-/* the handle on each th that will grab to resize */
-.colHandle {
-	height:100%;
-	width:20px;
-	background-color:transparent;
-	position:absolute;
-	right:0px;
-	top:0px;
+div.gridWrapper .gridPager .slider .slider .sliderThumb {
+  width: 13px;
+  height: 13px;
+  -webkit-border-radius: 6px;
+  border-radius: 6px;
+  margin-top: -7px;
+  -webkit-box-shadow: 0px 0px 4px #333;
+  box-shadow: 0px 0px 4px #333;
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #fff), color-stop(0.5, #f1f1f1), color-stop(0.51, #e1e1e1), color-stop(1, #f6f6f6));
+  background: -webkit-linear-gradient(top, #fff 0%, #f1f1f1 50%, #e1e1e1 51%, #f6f6f6 100%);
+  background: -moz-linear-gradient(top, #fff 0%, #f1f1f1 50%, #e1e1e1 51%, #f6f6f6 100%);
+  background: -o-linear-gradient(top, #fff 0%, #f1f1f1 50%, #e1e1e1 51%, #f6f6f6 100%);
+  background: -ms-linear-gradient(top, #fff 0%, #f1f1f1 50%, #e1e1e1 51%, #f6f6f6 100%);
+  background: linear-gradient(top, #fff 0%, #f1f1f1 50%, #e1e1e1 51%, #f6f6f6 100%);
+  cursor: pointer;
 }
-/* the bottom right corner div that allows you to resize */
-.gridHandle {
-	width:10px;
-	height:10px;
-	cursor:se-resize;
-	position:absolute;
-	bottom:0px;
-	right:0px;
-	background-color:rgba(0,0,0,.5);
+div.gridWrapper .gridPager .currentPage input,
+div.gridWrapper .gridPager .search input {
+  float: left;
+  height: 26px;
+  width: 30px;
+  margin-left: 2px;
+  text-align: center;
 }
-
-/* the right click menu */
-.gridContext {
-	position:fixed;
-	width:200px;
-	padding:2px;
-	z-index:99999;
+div.gridWrapper .gridPager .pagination {
+  margin: 0;
 }
-/* each option in the right click menu */
-.gridContext div {
-	cursor:pointer;
+div.gridWrapper .gridPager .pagination li a,
+div.gridWrapper .gridPager .pagination li span {
+  background: #fff;
 }
-/* the close button in the right click  menu */
-.closeContext {
-	margin:0px !important;
-	padding:0px !important;
-	position:absolute;
-	top:3px;
-	right:3px;
-	z-index:98;
-	font-size:11px !important;
+div.gridWrapper .gridPager .pagination.left li {
+  white-space: nowrap;
 }
-/* each input box inside the table inherits its parent styles */
-.editableInput {
-	width:95%;
-	background:transparent;
-	color:inherit;
-	font-weight:inherit;
-	font-size:inherit;
-	font-family:inherit;
-	margin:0px;
+div.gridWrapper .gridPager .pagination ul,
+div.gridWrapper .gridPager .pagination ol {
+  margin: 0;
 }
-/* clickable nRows */
-.nRows {
-	cursor:pointer;
+div.gridWrapper .gridPager .gridSave {
+  padding: 8px 10px;
 }
-.grid a {
-	text-decoration:underline;
+div.gridWrapper .gridPager .pager_showing {
+  min-width: 108px;
+  text-align: center;
+}
+div.gridWrapper .gridPager .search {
+  position: relative;
+}
+div.gridWrapper .gridPager .search input {
+  -webkit-transition: width, 200ms ease-out;
+  -moz-transition: width, 200ms ease-out;
+  -o-transition: width, 200ms ease-out;
+  -ms-transition: width, 200ms ease-out;
+  transition: width, 200ms ease-out;
+  text-align: left;
+}
+div.gridWrapper .gridPager .search input:focus {
+  width: 150px;
+}
+div.gridWrapper .gridPager .search.icon:after,
+div.gridWrapper .gridPager .search input:focus:after {
+  content: '';
+  width: 14px;
+  height: 14px;
+  display: block;
+  position: absolute;
+  top: 10px;
+  left: -27px;
+  background-image: url("http://twitter.github.com/bootstrap/assets/img/glyphicons-halflings.png");
+  background-position: -48px 0px;
+}
+div.gridWrapper select {
+  width: 100%;
+}
+.ui-datepicker {
+  z-index: 2;
+}
+.btn:hover {
+  -webkit-transition: none;
+  -moz-transition: none;
+  -o-transition: none;
+  -ms-transition: none;
+  transition: none;
 }
