--- a/grid.styl
+++ b/grid.styl
@@ -272,8 +272,9 @@ div.gridWrapper
 				white-space:no-wrap
 			ul,ol
 				margin:0
-		.gridSave
+		.btn
 			padding: 8px 10px;
+			margin-left:5px;
 		.pager_showing
 			min-width 108px
 			text-align center
